foundations/flex/07-flex-layout-2/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.header {
  height: 72px;
  background: darkmagenta;
  color: white;
  display: flex;
  align-items: center;
  padding: 0 16px;
  font-size: 32px;
  font-weight: 900;
}

.sit-nice {
  display: flex;
  flex-grow: 1;
  min-height:100%;
}

.allish {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  
}

.cardbox {
  display: flex;
  flex-wrap: wrap; 
  width: 1000px;
  gap:32px;
  padding: 48px;
}

.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
 padding: 16px;
  width: 300px;
}

.sidebar {
  width: 300px;
  background: royalblue;
  box-sizing: border-box;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  padding: 16px;
}

.footer {
  height: 72px;
  background: #eee;
  color: darkmagenta;
  display: flex;
  align-items: center;
  justify-content: center;
}



ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

a {
  text-decoration: none;
  color: white;
  font-size: 24px;
}

